--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
   "scripts": {
     "dev": "next dev",
     "clean": "rmdir /s /q .next",
-    "build": "next build && next export",
+    "build": "next build  && next export",
+    "export": "next export ",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "firebase": "^10.5.2",
-    "next": "^14.0.1",
+    "jest": "^29.7.0",
+    "next": "^14.0.3-canary.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.17.0",
+    "react-router-dom": "^6.18.0",
     "react-server-components": "^0.0.0",
     "redux": "^4.2.1"
   },
@@ -25,5 +28,8 @@
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
     "tailwindcss": "^3"
+  },
+  "resolutions": {
+    "react-countup/countup.js": "2.5.0"
   }
 }
